--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+
+*{
+  margin: 0;
+}
+
+a{
+  text-decoration: none;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +14,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(241, 241, 241);
 }
 
 code {
